--- a/University-Campus-App/frontend/web_react/package.json
+++ b/University-Campus-App/frontend/web_react/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@livekit/components-react": "^2.9.17",
+    "axios": "^1.3.2",
+    "livekit-client": "^2.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
-    "axios": "^1.3.2",
-    "tailwindcss": "^3.2.4",
-    "react-icons": "^4.7.1"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13",
-    "typescript": "4.9.5",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "react-scripts": "5.0.1",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
