--- a/University-Campus-App/frontend/web_react/package.json
+++ b/University-Campus-App/frontend/web_react/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/jest": "^29.5.12",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.4.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "react-scripts": "5.0.1",
